--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "distributions-normal-random": "0.0.0",
     "draggy": "^1.4.0",
     "inherits": "^2.0.1",
+    "interact.js": "^1.2.6",
     "is-browser": "^2.0.1",
     "mucss": "^1.1.2",
     "pcm-util": "^2.0.1",
