--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "mucss": "^1.1.2",
     "pcm-util": "^2.0.1",
     "resizable": "^1.0.5",
-    "slidy": "^0.5.19",
+    "slidy": ">=0.6.0",
     "xtend": "^4.0.1"
   }
 }
